--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,14 +38,14 @@ services:
             static_configs:
               - targets: ["localhost:9090"]
 
-          - job_name: "node_exporter"
+          - job_name: "tools_node_exporter"
             static_configs:
               - targets: ["node_exporter:9100"]
 
           - job_name: "cadvisor"
             static_configs:
               - targets: ["cadvisor:8080"]
-              
+
           - job_name: "bactocloud"
             basic_auth:
               username: "${BACTOCLOUD_USERNAME}"
